# docker-workshop

homework-1/: Dockerfile  docker-compose.yaml  docker-green-taxi-ingest.sh  ingest_data.py  main.py  pyproject.toml  queries.sql
pipeline/: Dockerfile  docker-commands.md  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py
test/: script.py
